fix - spacing issues on small screens

--- a/capstone/static/css/scss/search.scss
+++ b/capstone/static/css/scss/search.scss
@@ -66,7 +66,7 @@ label {
     }
   }
   .dropdown-title, .dropdown-item {
-    margin-top: 0;
+    margin-top: 0.1em;
     padding-top: 0.2em;
     padding-right: 0.3em;
     padding-bottom: 0;
@@ -86,7 +86,7 @@ label {
     display: inline-block;
     overflow-x: hidden;
     max-height: 100%;
-    width: 85%;
+    width: 75%;
   }
 
   small {
